# essentia_test

./: CMakeLists.txt  example_algorithm.cpp  main.cpp
juce_test/: CMakeLists.txt  juce_test.cpp
python/: FundamentalFrequency.py  MicrophoneInput.py  PitchDetection.py  inspect_output.py
